--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,14 @@
-# Firebase build and deployment files
-/firebase-debug.log
-/firebase-debug.*.log
+Firebase
+.firebase/
+firebase.json
 .firebaserc
-
-# Firebase Hosting
-/firebase.json
-*.cache
-hosting/.cache
-
-# Firebase Functions
-/functions/node_modules/
-/functions/.env
-/functions/package-lock.json
-
-# Firebase Emulators
-/firebase-*.zip
-/.firebase/
-/emulator-ui/
-
-# Logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Environment files (local configs)
-/.env.*
+firebase-debug.log
+Dependencies
+/node_modules
+Build output
+/dist
+/build
+Environment variables
+.env
+.env.local
+.env.*.local
